# miner-core: the library crate. THE ONE PLACE every later Phase compiles against.
#
# CRITICAL — Phase 1 invariants enforced here:
#   * No tokio, no async-std, no smol, no async-trait, no futures-runtime deps. miner-core
#     is sync + rayon only (FOUND-04, D-20). Adding any of these breaks the CI gate
#     `cargo tree -p miner-core` and the agent contract that the engine is purely synchronous.
#   * No workspace-internal deps. miner-core is the foundation; readers, wrappers, and
#     xtask all point at it (one-way arrow, ARCHITECTURE.md §2).
#   * schemars is a real (non-optional) dep because derive impls live on production types
#     and xtask calls `schemars::schema_for!(Finding)` against the same compiled artifact
#     CI validates (Plan 06).
#
# Plan 03 (this plan) landed the locked Finding envelope types in `findings`, the error
# vocabulary in `error`, the config schema types in `config`, and the FindingSink trait
# interface. Plan 04 will land the StdoutSink + stderr_emit implementations; Plan 05 will
# implement the figment-based MinerConfig builder; Plan 06 will wire xtask schema regen.

[package]
name = "miner-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
# v1.0 ships via GitHub Releases binaries, not crates.io. Marking all
# crates `publish = false` lets `[bans] allow-wildcard-paths = true` in
# deny.toml exempt intra-workspace `{ path = "../foo" }` deps (which
# cargo-deny treats as wildcards). Flip to `true` and add `version = "..."`
# to every intra-workspace path dep when this crate is ready for crates.io.
publish = false

[lib]

[dependencies]
serde.workspace      = true
serde_json.workspace = true
schemars.workspace   = true
chrono.workspace     = true
thiserror.workspace  = true
tracing.workspace    = true
ulid.workspace       = true
blake3.workspace     = true
base64.workspace     = true
# Required by `MinerError::Config(#[from] figment::Error)` in error/mod.rs; Plan 05 will
# also use it for the production `build_figment` factory in config/mod.rs.
figment.workspace    = true
# Phase 2 additions:
arrow.workspace      = true   # CACHE-06 cache format (Plan 02-05 uses; declared here so
                              # the workspace dep graph lands in one PR — Plan 02-01 scope)
tempfile.workspace   = true   # atomic NamedTempFile::persist (Plan 02-05); ahead-declare
                              # so downstream plans inherit through this crate
# Phase 3 additions:
# `statrs` ships the `ChiSquared` distribution used by Ljung-Box p-value computation
# (D3-04). miner-core is the ONLY crate that depends on it (Pitfall 1 — keep the chi-squared
# kernel in one place). The dep is sync-only — no async creep into miner-core (FOUND-04).
statrs.workspace     = true
# Phase 4 (Plan 04-01) additions per 04-RESEARCH.md §Section 4 Dependency-Add Audit:
# - `ndarray`        — n-dim numerical arrays / rolling-window kernels (ANOM-03, CROSS-02)
# - `ndarray-stats`  — mean/var/quantile/correlation primitives (ANOM-02 summary, CROSS-02)
# - `nalgebra`       — small fixed-size linear algebra (CROSS-03 rolling OLS)
# All three are sync-only — FOUND-04 invariant preserved.
ndarray.workspace       = true
ndarray-stats.workspace = true
nalgebra.workspace      = true
# Phase 5 (Plan 05-01) additions per 05-RESEARCH.md §"Standard Stack":
# - `rand`           — `Rng` + `SeedableRng` trait surface (NOT thread-local rngs;
#                      `SmallRng`/`StdRng` are explicitly non-portable — pin Xoshiro)
# - `rand_xoshiro`   — `Xoshiro256PlusPlus` portable PRNG for bootstrap + null
#                      resampling (HYG-05 bit-for-bit reproducible RNG)
# - `toml`           — TOML deserialiser for the sweep manifest (Plan 05-04 / OP-04)
# All three are sync-only — FOUND-04 invariant preserved.
rand.workspace          = true
rand_xoshiro.workspace  = true
toml.workspace          = true
# Phase 5 (Plan 05-04) addition — `rayon` for the sweep runner's
# parallel job fanout (D5-04 / OP-04). Work-stealing thread pool;
# FOUND-04 invariant preserved (rayon is sync-only — no tokio creep).
rayon.workspace         = true
# Phase 7 (Plan 07-05) addition — `realfft` for IAAFT phase-scramble null
# kernel (Plan 05-02 deferred). Real-input FFT only; transitively pulls
# rustfft. Both verified sync-only — FOUND-04 invariant preserved.
realfft.workspace       = true

[dev-dependencies]
jsonschema.workspace = true
# Plan 05 will use `figment::Jail` (gated behind the `test` feature) for config-precedence
# tests — the canonical figment testing helper that serialises env-var access process-wide
# and scope-cleans on drop. The workspace inheritance only enables ["toml", "env"]; the
# `test` feature is opt-in per-crate.
figment              = { version = "0.10", features = ["toml", "env", "test"] }
# Plan 07 Task 1 (`tests/config_precedence.rs`) builds production-grade integration tests
# against `miner_core::config::build_figment` from the public re-export surface. Tests use
# `figment::Jail` (already enabled by the `test` feature above) for env isolation and
# scratch TOML files; `serial_test::serial` annotations belt-and-brace the env-var
# serialisation. `tempfile` was contemplated for raw `std::env::set_var` plumbing but the
# workspace `forbid(unsafe_code)` lint blocks that pattern in Rust 2024 — Jail is the
# documented alternative and uses no `tempfile`, so the dev-dep is omitted.
serial_test          = "3"
# Phase 2 Wave 0 dev-deps:
# `proptest` — aggregator / path-layout property tests (path_round_trip_proptest etc.)
# `insta`    — gap-manifest + Arrow IPC schema snapshot tests
proptest             = "1.11"
# `json` feature exposes `insta::assert_json_snapshot!` (Plan 02-04 Task 3 gate).
insta                = { version = "1.47", features = ["json"] }
# Plan 02-06 Task 1: `full_determinism.rs` integration test drives the REAL
# `DukascopyReader` (not a `MockReader`) against a `SyntheticCache` to prove
# the end-to-end pipeline (zstd-CSV parse -> aggregate -> Arrow IPC write -> sidecar JSON)
# is byte-identical across two runs. This introduces a dev-only dependency cycle
# (`miner-core` dev-depends on `miner-reader-dukascopy` which depends on `miner-core`);
# cargo permits dev-dep cycles because dev-deps are not part of the published API graph
# (see Plan 02-06 threat model T-02-21 — accepted).
miner-reader-dukascopy = { path = "../miner-reader-dukascopy" }
zstd.workspace       = true
# Plan 03-06: Activate the `test-internal` feature on the miner-core dep
# graph during this crate's integration test builds. Cargo permits a
# self-pointing dev-dep — the lib graph and the dev-dep graph are separate,
# so `cargo build` / `cargo build --release` activate neither cfg(test) nor
# the feature and the cfg-gated `ScanRequest.sleep_after_first_finding_ms`
# field stays absent from the release surface. The same pattern (with a
# parent-path) is used by `crates/miner-cli/Cargo.toml`.
miner-core           = { path = ".", features = ["test-internal"] }
# Phase 7 (Plan 07-06) — criterion microbench harness. Bench-only (`[dev-dependencies]`),
# so it does NOT leak into the production dependency graph (`--edges normal,build`).
# FOUND-04 invariant preserved (no tokio/async-* creep). The `[[bench]]` entries at the
# bottom of this file register the six microbench binaries; each requires the
# `harness=false` flag (07-RESEARCH §"Pitfall 2" — omitting it causes "no main function"
# link errors). NOTE: `dhat` is deliberately NOT added as a miner-core dep here
# (07-RESEARCH §"Anti-Patterns"); dhat is gated to `miner-bench` only via Plan 07-08.
criterion.workspace  = true
# Phase 7 (Plan 07-06) — `csv` is needed by `benches/bench_csv_parse_1day.rs` to
# mirror the production CSV-parse callsite in `crates/miner-reader-dukascopy/src/reader.rs`.
# The bench measures the same `csv::ReaderBuilder::new().has_headers(true).from_reader(...)`
# pipeline against an in-memory decompressed buffer; dev-dep keeps it out of the
# production graph.
csv.workspace        = true

[lints]
workspace = true

# Phase 7 (Plan 07-06) microbench registration — six criterion binaries living at
# `crates/miner-core/benches/bench_*.rs`. The custom-harness flag is REQUIRED for every
# entry (07-RESEARCH §"Pitfall 2"); criterion supplies its own `main` via
# `criterion_main!`, and omitting the flag triggers a `no main function` link error.
#
# CI does NOT run these (per D7-03 — criterion variance on shared runners is too
# high for a useful gate); local `cargo bench -p miner-core` runs all six.

[[bench]]
name = "bench_zstd_decompress_1day"
harness = false

[[bench]]
name = "bench_csv_parse_1day"
harness = false

[[bench]]
name = "bench_aggregate_1m_to_15m"
harness = false

[[bench]]
name = "bench_rolling_corr"
harness = false

[[bench]]
name = "bench_ljung_box"
harness = false

[[bench]]
name = "bench_ols_fit_4d"
harness = false

# Phase 3 Plan 02 additions:
# `test-internal` exposes test-only hooks (e.g., `ScanCtx.sleep_after_first_finding_ms`,
# `--sleep-after-first-finding-ms` CLI flag) without polluting production builds. NEVER
# enable in release profiles. The feature is purely a cfg-flag toggle (empty list) — the
# matching `#[cfg(any(test, feature = "test-internal"))]` gates compile under any of:
#   1. `cargo test` (test cfg auto-activates),
#   2. `cargo build --features test-internal` (explicit opt-in for non-test consumers).
# A default `cargo build` / `cargo build --release` activates NEITHER and the cfg-gated
# fields are absent from the release surface (T-03-02-05 mitigation).
[features]
test-internal = []
